# cmake-cpp-template

./: README.md  cookiecutter.json
{{cookiecutter.project_name}}/: CMakeLists.txt  README.md
{{cookiecutter.project_name}}/example/: CMakeLists.txt  {{cookiecutter.library_name}}_usage.cpp
{{cookiecutter.project_name}}/src/: CMakeLists.txt  {{cookiecutter.library_name}}.cpp  {{cookiecutter.library_name}}.hpp
{{cookiecutter.project_name}}/tests/: CMakeLists.txt  test_{{cookiecutter.library_name}}.cpp
